<resources>
    <string name="app_name">MotionLayoutDemo</string>

    <string name="content_description">content description</string>

    <string name="number_0">0</string>
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="number_6">6</string>
    <string name="number_7">7</string>
    <string name="number_8">8</string>
    <string name="number_9">9</string>
    <string name="symbol_star">*</string>
    <string name="del">Del</string>
    <string name="sharp_symbol">#</string>
    <string name="multi_state">Multi  State</string>
    <string name="key_frame">Key Frame</string>

</resources>
